fix modernizer warnings